Replace English with Japanese, remove bars in details.html, add links to signup.html and login.html

--- a/details.html
+++ b/details.html
@@ -22,7 +22,7 @@
 		<!-- Chart.js CDN -->
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-		<title>Sumunara | Details</title>
+		<title>Sumunara | 地域情報</title>
 	</head>
 
 	<body>
@@ -55,7 +55,7 @@
 				>
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html">Home</a>
+							<a class="nav-link" href="index.html">ホーム</a>
 						</li>
 
 						<!-- <li class="nav-item">
@@ -67,7 +67,7 @@
 						</li> -->
 
 						<li class="nav-item">
-							<a class="nav-link" href="#">Log out</a>
+							<a class="nav-link" href="#">ログアウト</a>
 						</li>
 					</ul>
 				</div>
@@ -79,7 +79,7 @@
 		<div id="summary-container" class="container">
 			<h1 id="summary-title" class="text-center mb-5">住吉の情報</h1>
 
-			<h3 id="summary-area" class="mb-3">Sumiyoshi</h3>
+			<h3 id="summary-area" class="mb-3">住吉</h3>
 
 			<p id="summary-notes" class="mb-3">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
@@ -125,9 +125,9 @@
 								>
 							</li>
 
-							<div class="bar-container">
+							<!-- <div class="bar-container">
 								<div id="noise-score" class="bar">中</div>
-							</div>
+							</div> -->
 
 							<li>
 								<a
@@ -139,11 +139,11 @@
 								</a>
 							</li>
 
-							<div class="bar-container">
+							<!-- <div class="bar-container">
 								<div id="traffic-accident-score" class="bar">
 									かなり高い
 								</div>
-							</div>
+							</div> -->
 
 							<li>
 								<a
@@ -154,9 +154,9 @@
 								>
 							</li>
 
-							<div class="bar-container">
+							<!-- <div class="bar-container">
 								<div id="crime-score" class="bar">高い</div>
-							</div>
+							</div> -->
 						</ul>
 					</div>
 				</div>
