--- a/error.html
+++ b/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 	<head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
@@ -19,7 +19,7 @@
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 		<link rel="stylesheet" href="./styles/style.css" />
 
-		<title>Sumunara | Error</title>
+		<title>Sumunara | 404</title>
 	</head>
 
 	<body>
