--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 		<link rel="stylesheet" href="./styles/style.css" />
 
-		<title>Sumunara | Log In</title>
+		<title>Sumunara | ログイン</title>
 	</head>
 
 	<body>
@@ -157,8 +157,8 @@
 				<form id="login-form" class="col">
 					<div class="form-group">
 						<label for="inputUserName"
-							><i class="fas fa-user mr-2"></i>Username or
-							email</label
+							><i class="fas fa-user mr-2"></i>ユーザー名 もしくは
+							メールアドレス</label
 						>
 
 						<input
@@ -170,7 +170,7 @@
 
 					<div class="form-group">
 						<label for="inputPassword"
-							><i class="fas fa-lock mr-2"></i>Password</label
+							><i class="fas fa-lock mr-2"></i>パスワード</label
 						>
 
 						<input
@@ -183,14 +183,21 @@
 
 					<div class="form-check">
 						<input type="checkbox" class="form-check-input" />
-						<label class="form-check-label">Remember me</label>
+						<label class="form-check-label"
+							>ログインしたままにする</label
+						>
 					</div>
 
 					<button type="submit" class="btn btn-warning">
 						Log in
 					</button>
 
-					<p>or <a href="#">Forgot password</a></p>
+					<p>または<a href="#">パスワードを忘れた場合</a></p>
+
+					<p>
+						初めてのご利用ですか？
+						<a href="signup.html">アカウント作成</a>
+					</p>
 				</form>
 				<!-- Email form -->
 			</div>
