--- a/resetpass.html
+++ b/resetpass.html
@@ -25,7 +25,7 @@
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 		<link rel="stylesheet" href="./styles/style.css" />
 
-		<title>Sumunara | Reset Password</title>
+		<title>Sumunara | パスワードリセット</title>
 	</head>
 
 	<body>
