--- a/results.html
+++ b/results.html
@@ -19,7 +19,7 @@
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 		<link rel="stylesheet" href="./styles/style.css" />
 
-		<title>Sumunara | Results</title>
+		<title>Sumunara | 検索結果</title>
 	</head>
 
 	<body>
@@ -52,7 +52,7 @@
 				>
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html">Home</a>
+							<a class="nav-link" href="index.html">ホーム</a>
 						</li>
 
 						<!-- <li class="nav-item">
@@ -64,7 +64,7 @@
 						</li> -->
 
 						<li class="nav-item">
-							<a class="nav-link" href="#">Log out</a>
+							<a class="nav-link" href="#">ログアウト</a>
 						</li>
 					</ul>
 				</div>
