--- a/terms.html
+++ b/terms.html
@@ -19,7 +19,7 @@
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 		<link rel="stylesheet" href="./styles/style.css" />
 
-		<title>Sumunara | Terms and Conditions</title>
+		<title>Sumunara | 利用規約</title>
 	</head>
 
 	<body>
