Add some links to the card and footer, disabled some links in the footer

--- a/index.html
+++ b/index.html
@@ -192,7 +192,11 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-6">
 						<div class="media mx-auto">
-							<a href="#" class="row align-items-center">
+							<a
+								href="https://yokanavi.com/event/"
+								class="row align-items-center"
+								target="_blank"
+							>
 								<img
 									data-src=".\images\index_areas_image1.jpg"
 									class="col-12 col-md-6 mx-auto"
@@ -265,7 +269,11 @@
 
 					<div class="col-lg-6">
 						<div class="media mx-auto">
-							<a href="#" class="row align-items-center">
+							<a
+								href="http://kateigomi-bunbetsu.city.fukuoka.lg.jp/"
+								class="row align-items-center"
+								target="_blank"
+							>
 								<img
 									data-src="./images/index_areas_image4.jpg"
 									class="img-fluid col-md-6 mx-auto"
@@ -292,7 +300,11 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-6">
 						<div class="media mx-auto">
-							<a href="#" class="row align-items-center">
+							<a
+								href="https://tabelog.com/fukuoka/rank/"
+								class="row align-items-center"
+								target="_blank"
+							>
 								<img
 									data-src="./images/index_areas_image5.jpg"
 									class="img-fluid col-md-6 mx-auto"
@@ -349,19 +361,52 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">北九州</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/hakata/index.html"
+									>博多区</a
+								>
 							</li>
 
 							<li>
-								<a href="#">福岡</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/chuo/index.html"
+									>中央区</a
+								>
 							</li>
 
 							<li>
-								<a href="#">筑豊</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/sawara/index.html"
+									>早良区</a
+								>
 							</li>
 
 							<li>
-								<a href="#">筑後</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/jonan/index.html"
+									>城南区</a
+								>
+							</li>
+
+							<li>
+								<a
+									href="https://www.city.fukuoka.lg.jp/nishi/index.html"
+									>西区</a
+								>
+							</li>
+
+							<li>
+								<a
+									href="https://www.city.fukuoka.lg.jp/minami/index.html"
+									>南区</a
+								>
+							</li>
+
+							<li>
+								<a
+									href="https://www.city.fukuoka.lg.jp/higashi/index.html"
+									>東区</a
+								>
 							</li>
 						</ul>
 					</div>
@@ -379,15 +424,19 @@
 							</li>
 
 							<li>
-								<a href="#">環境</a>
+								<a href="#" class="btn-link disabled">環境</a>
 							</li>
 
 							<li>
-								<a href="#">治安・安全</a>
+								<a href="#" class="btn-link disabled"
+									>治安・安全</a
+								>
 							</li>
 
 							<li>
-								<a href="#">入園・入学</a>
+								<a href="#" class="btn-link disabled"
+									>入園・入学</a
+								>
 							</li>
 						</ul>
 					</div>
