--- a/login.html
+++ b/login.html
@@ -188,8 +188,8 @@
 						>
 					</div>
 
-					<button type="submit" class="btn btn-warning">
-						Log in
+					<button type="submit" id="loginBtn" class="btn btn-warning">
+						ログイン
 					</button>
 
 					<p>または<a href="#">パスワードを忘れた場合</a></p>
