--- a/signup.html
+++ b/signup.html
@@ -251,7 +251,11 @@
 						</div>
 					</div>
 
-					<button type="submit" class="btn btn-warning">
+					<button
+						type="submit"
+						id="registerBtn"
+						class="btn btn-warning"
+					>
 						アカウント作成
 					</button>
 
@@ -393,7 +397,8 @@
 			crossorigin="anonymous"
 		></script>
 
-		<script type="module" src="scripts/main.js"></script>
+		<script type="module" src="/scripts/main.js"></script>
 		<script src="/scripts/validation.js"></script>
+		<script src="/scripts/register.js"></script>
 	</body>
 </html>
