Modify spacing index.html and terms.html, add links and border in footer

--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
 							<li>
 								<a
 									href="https://www.city.fukuoka.lg.jp/hakata/index.html"
+									target="_blank"
 									>博多区</a
 								>
 							</li>
@@ -370,6 +371,7 @@
 							<li>
 								<a
 									href="https://www.city.fukuoka.lg.jp/chuo/index.html"
+									target="_blank"
 									>中央区</a
 								>
 							</li>
@@ -377,6 +379,7 @@
 							<li>
 								<a
 									href="https://www.city.fukuoka.lg.jp/sawara/index.html"
+									target="_blank"
 									>早良区</a
 								>
 							</li>
@@ -384,6 +387,7 @@
 							<li>
 								<a
 									href="https://www.city.fukuoka.lg.jp/jonan/index.html"
+									target="_blank"
 									>城南区</a
 								>
 							</li>
@@ -391,6 +395,7 @@
 							<li>
 								<a
 									href="https://www.city.fukuoka.lg.jp/nishi/index.html"
+									target="_blank"
 									>西区</a
 								>
 							</li>
@@ -398,6 +403,7 @@
 							<li>
 								<a
 									href="https://www.city.fukuoka.lg.jp/minami/index.html"
+									target="_blank"
 									>南区</a
 								>
 							</li>
@@ -405,6 +411,7 @@
 							<li>
 								<a
 									href="https://www.city.fukuoka.lg.jp/higashi/index.html"
+									target="_blank"
 									>東区</a
 								>
 							</li>
@@ -416,11 +423,19 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">飲食店</a>
+								<a
+									href="https://www.cookdoor.jp/fukuoka/sc40130/list/"
+									target="_blank"
+									>飲食店</a
+								>
 							</li>
 
 							<li>
-								<a href="#">イベント</a>
+								<a
+									href="https://yokanavi.com/event/"
+									target="_blank"
+									>イベント</a
+								>
 							</li>
 
 							<li>
@@ -466,10 +481,12 @@
 
 				<div id="copyright" class="text-center row align-items-center">
 					<p>
-						<img
-							src="images/logo_transparent2.png"
-							alt="sumunara logo"
-						/><span id="year"></span> MAD Works, LLC
+						<a href="index.html">
+							<img
+								src="images/logo_transparent2.png"
+								alt="sumunara logo"
+							/><span id="year"></span> MAD Works, LLC
+						</a>
 					</p>
 				</div>
 			</div>
