--- a/terms.html
+++ b/terms.html
@@ -26,7 +26,7 @@
 		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
-				<a class="navbar-brand" href="index.html">
+				<a class="navbar-brand" href="signup.html">
 					<img
 						src="images/logo_transparent2.png"
 						alt="sumunara logo"
@@ -80,14 +80,14 @@
 
 		<!-- Terms and Conditions -->
 		<form id="terms-container" class="container">
-			<div class="terms-contents">
+			<div class="terms-contents container">
 				<div class="terms-head">
-					<h1>利用規約</h1>
+					<h2>利用規約</h2>
 					<p>
 						この利用規約（以下、「本規約」といいます。）は、＿＿＿＿＿（以下、「当社」といいます。）がこのウェブサイト上で提供するサービス（以下、「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下、「ユーザー」といいます。）には、本規約に従って、本サービスをご利用いただきます。
 					</p>
 				</div>
-				<h2>第1条（適用）</h2>
+				<h3>第1条（適用）</h3>
 				<ol>
 					<li>
 						本規約は、ユーザーと当社との間の本サービスの利用に関わる一切の関係に適用されるものとします。
@@ -100,7 +100,7 @@
 					</li>
 				</ol>
 
-				<h2>第2条（利用登録）</h2>
+				<h3>第2条（利用登録）</h3>
 				<ol>
 					<li>
 						本サービスにおいては、登録希望者が本規約に同意の上、当社の定める方法によって利用登録を申請し、当社がこれを承認することによって、利用登録が完了するものとします。
@@ -121,7 +121,7 @@
 					</li>
 				</ol>
 
-				<h2>第3条（ユーザーIDおよびパスワードの管理）</h2>
+				<h3>第3条（ユーザーIDおよびパスワードの管理）</h3>
 				<ol>
 					<li>
 						ユーザーは、自己の責任において、本サービスのユーザーIDおよびパスワードを適切に管理するものとします。
@@ -134,7 +134,7 @@
 					</li>
 				</ol>
 
-				<h2>第4条（利用料金および支払方法）</h2>
+				<h3>第4条（利用料金および支払方法）</h3>
 				<ol>
 					<li>
 						ユーザーは、本サービスの有料部分の対価として、当社が別途定め、本ウェブサイトに表示する利用料金を、当社が指定する方法により支払うものとします。
@@ -144,7 +144,7 @@
 					</li>
 				</ol>
 
-				<h2>第5条（禁止事項）</h2>
+				<h3>第5条（禁止事項）</h3>
 				<p>
 					ユーザーは、本サービスの利用にあたり、以下の行為をしてはなりません。
 				</p>
@@ -180,7 +180,7 @@
 					<li>その他、当社が不適切と判断する行為</li>
 				</ol>
 
-				<h2>第6条（本サービスの提供の停止等）</h2>
+				<h3>第6条（本サービスの提供の停止等）</h3>
 				<ol>
 					<li>
 						当社は、以下のいずれかの事由があると判断した場合、ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。
@@ -204,7 +204,7 @@
 					</li>
 				</ol>
 
-				<h2>第7条（利用制限および登録抹消）</h2>
+				<h3>第7条（利用制限および登録抹消）</h3>
 				<ol>
 					<li>
 						当社は、ユーザーが以下のいずれかに該当する場合には、事前の通知なく、ユーザーに対して、本サービスの全部もしくは一部の利用を制限し、またはユーザーとしての登録を抹消することができるものとします。
@@ -230,12 +230,12 @@
 					</li>
 				</ol>
 
-				<h2>第8条（退会）</h2>
+				<h3>第8条（退会）</h3>
 				<p>
 					ユーザーは、当社の定める退会手続により、本サービスから退会できるものとします。
 				</p>
 
-				<h2>第9条（保証の否認および免責事項）</h2>
+				<h3>第9条（保証の否認および免責事項）</h3>
 				<ol>
 					<li>
 						当社は、本サービスに事実上または法律上の瑕疵（安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性、セキュリティなどに関する欠陥、エラーやバグ、権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。
@@ -251,32 +251,32 @@
 					</li>
 				</ol>
 
-				<h2>第10条（サービス内容の変更等）</h2>
+				<h3>第10条（サービス内容の変更等）</h3>
 				<p>
 					当社は、ユーザーに通知することなく、本サービスの内容を変更しまたは本サービスの提供を中止することができるものとし、これによってユーザーに生じた損害について一切の責任を負いません。
 				</p>
 
-				<h2>第11条（利用規約の変更）</h2>
+				<h3>第11条（利用規約の変更）</h3>
 				<p>
 					当社は、必要と判断した場合には、ユーザーに通知することなくいつでも本規約を変更することができるものとします。なお、本規約の変更後、本サービスの利用を開始した場合には、当該ユーザーは変更後の規約に同意したものとみなします。
 				</p>
 
-				<h2>第12条（個人情報の取扱い）</h2>
+				<h3>第12条（個人情報の取扱い）</h3>
 				<p>
 					当社は、本サービスの利用によって取得する個人情報については、当社「プライバシーポリシー」に従い適切に取り扱うものとします。
 				</p>
 
-				<h2>第13条（通知または連絡）</h2>
+				<h3>第13条（通知または連絡）</h3>
 				<p>
 					ユーザーと当社との間の通知または連絡は、当社の定める方法によって行うものとします。当社は、ユーザーから、当社が別途定める方式に従った変更届け出がない限り、現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い、これらは、発信時にユーザーへ到達したものとみなします。
 				</p>
 
-				<h2>第14条（権利義務の譲渡の禁止）</h2>
+				<h3>第14条（権利義務の譲渡の禁止）</h3>
 				<p>
 					ユーザーは、当社の書面による事前の承諾なく、利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し、または担保に供することはできません。
 				</p>
 
-				<h2>第15条（準拠法・裁判管轄）</h2>
+				<h3>第15条（準拠法・裁判管轄）</h3>
 				<ol>
 					<li>本規約の解釈にあたっては、日本法を準拠法とします。</li>
 					<li>
