Apply footer to all the html files, remove crime details, scroll the hero image, modify stylings

--- a/details.html
+++ b/details.html
@@ -66,9 +66,9 @@
 							<a class="nav-link" href="signup.html">Sign up</a>
 						</li> -->
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="#">ログアウト</a>
-						</li>
+						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -145,14 +145,14 @@
 								</div>
 							</div> -->
 
-							<li>
+							<!-- <li>
 								<a
 									href="#crime-anchor"
 									id="crime-rate"
 									class="get-data"
 									>犯罪発生率: <span>高い</span></a
 								>
-							</li>
+							</li> -->
 
 							<!-- <div class="bar-container">
 								<div id="crime-score" class="bar">高い</div>
@@ -312,7 +312,7 @@
 					<!-- traffic-accident-details -->
 
 					<!-- crime-details -->
-					<a class="anchor" id="crime-anchor"></a>
+					<!-- <a class="anchor" id="crime-anchor"></a>
 
 					<ul
 						id="crime-details"
@@ -388,8 +388,14 @@
 
 							<div class="col-5 sum"></div>
 						</li>
-					</ul>
+					</ul> -->
 					<!-- crime-details -->
+				</div>
+
+				<div id="link-container">
+					<a href="index.html" class="more-link btn btn-warning"
+						>HOMEに戻る</a
+					>
 				</div>
 			</section>
 		</div>
@@ -404,19 +410,59 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">北九州</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/hakata/index.html"
+									target="_blank"
+									>博多区</a
+								>
 							</li>
 
 							<li>
-								<a href="#">福岡</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/chuo/index.html"
+									target="_blank"
+									>中央区</a
+								>
 							</li>
 
 							<li>
-								<a href="#">筑豊</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/sawara/index.html"
+									target="_blank"
+									>早良区</a
+								>
 							</li>
 
 							<li>
-								<a href="#">筑後</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/jonan/index.html"
+									target="_blank"
+									>城南区</a
+								>
+							</li>
+
+							<li>
+								<a
+									href="https://www.city.fukuoka.lg.jp/nishi/index.html"
+									target="_blank"
+									>西区</a
+								>
+							</li>
+
+							<li>
+								<a
+									href="https://www.city.fukuoka.lg.jp/minami/index.html"
+									target="_blank"
+									>南区</a
+								>
+							</li>
+
+							<li>
+								<a
+									href="https://www.city.fukuoka.lg.jp/higashi/index.html"
+									target="_blank"
+									>東区</a
+								>
 							</li>
 						</ul>
 					</div>
@@ -426,23 +472,35 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">飲食店</a>
+								<a
+									href="https://www.cookdoor.jp/fukuoka/sc40130/list/"
+									target="_blank"
+									>飲食店</a
+								>
 							</li>
 
 							<li>
-								<a href="#">イベント</a>
+								<a
+									href="https://yokanavi.com/event/"
+									target="_blank"
+									>イベント</a
+								>
 							</li>
 
 							<li>
-								<a href="#">環境</a>
+								<a href="#" class="btn-link disabled">環境</a>
 							</li>
 
 							<li>
-								<a href="#">治安・安全</a>
+								<a href="#" class="btn-link disabled"
+									>治安・安全</a
+								>
 							</li>
 
 							<li>
-								<a href="#">入園・入学</a>
+								<a href="#" class="btn-link disabled"
+									>入園・入学</a
+								>
 							</li>
 						</ul>
 					</div>
@@ -452,18 +510,6 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">お問い合わせ</a>
-							</li>
-
-							<li>
-								<a href="#">お知らせ</a>
-							</li>
-
-							<li>
-								<a href="#">ヘルプ</a>
-							</li>
-
-							<li>
 								<a href="#">サイトマップ</a>
 							</li>
 						</ul>
@@ -472,10 +518,12 @@
 
 				<div id="copyright" class="text-center row align-items-center">
 					<p>
-						<img
-							src="images/logo_transparent2.png"
-							alt="sumunara logo"
-						/><span id="year"></span> MAD Works, LLC
+						<a href="index.html">
+							<img
+								src="images/logo_transparent2.png"
+								alt="sumunara logo"
+							/><span id="year"></span> MAD Works, LLC
+						</a>
 					</p>
 				</div>
 			</div>
