--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 							>
 						</li> -->
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="#">ログアウト</a>
-						</li>
+						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -120,7 +120,7 @@
 								<img
 									class="card-img-top"
 									src="./images/icons/index_what-is-sumuna_icon1.png"
-									alt="house"
+									alt="information icon"
 								/>
 								<div class="card-body text-center">
 									<h5 class="card-title">
@@ -138,7 +138,7 @@
 								<img
 									class="card-img-top"
 									src="./images/icons/index_what-is-sumuna_icon2.png"
-									alt="house"
+									alt="search icon"
 								/>
 								<div class="card-body text-center">
 									<h5 class="card-title">
@@ -156,7 +156,7 @@
 								<img
 									class="card-img-top"
 									src="./images/icons/index_what-is-sumuna_icon3.png"
-									alt="house"
+									alt="lightbulb"
 								/>
 								<div class="card-body text-center">
 									<h5 class="card-title">新しい発見</h5>
@@ -169,11 +169,11 @@
 					</div>
 				</div>
 
-				<div
+				<!-- <div
 					class="h-100px row align-items-center justify-content-center"
 				>
 					<button class="btn btn-warning">もっと詳しく</button>
-				</div>
+				</div> -->
 			</div>
 		</section>
 		<!-- Section - What is Sumunara -->
@@ -199,8 +199,8 @@
 							>
 								<img
 									data-src=".\images\index_areas_image1.jpg"
-									class="col-12 col-md-6 mx-auto"
-									alt="Generic placeholder image"
+									class="img-fluid col-md-6 mx-auto"
+									alt="出かけよう！イベント画像"
 								/>
 								<!-- test delete img-fluid   -->
 
@@ -224,7 +224,7 @@
 								<img
 									data-src="./images/index_areas_image2.jpg"
 									class="img-fluid col-md-6 mx-auto"
-									alt="Generic placeholder image"
+									alt="私が求めてるのはどの地域かな？画像"
 								/>
 
 								<div class="media-body row col-md-6 mx-auto">
@@ -248,7 +248,7 @@
 								<img
 									data-src="./images/index_areas_image3.jpg"
 									class="img-fluid col-md-6 mx-auto"
-									alt="Generic placeholder image"
+									alt="懐かしの教室画像"
 								/>
 
 								<div
@@ -277,7 +277,7 @@
 								<img
 									data-src="./images/index_areas_image4.jpg"
 									class="img-fluid col-md-6 mx-auto"
-									alt="Generic placeholder image"
+									alt="整頓されたゴミ置き場の画像"
 								/>
 
 								<div class="media-body row col-md-6 mx-auto">
@@ -308,7 +308,7 @@
 								<img
 									data-src="./images/index_areas_image5.jpg"
 									class="img-fluid col-md-6 mx-auto"
-									alt="Generic placeholder image"
+									alt="美味しそうなグルメ画像"
 								/>
 
 								<div
@@ -331,7 +331,7 @@
 								<img
 									data-src="./images/index_areas_image6.jpg"
 									class="img-fluid col-md-6 mx-auto"
-									alt="Generic placeholder image"
+									alt="わくわくする居酒屋画像"
 								/>
 
 								<div class="media-body row col-md-6 mx-auto">
@@ -460,18 +460,6 @@
 						<h5 class="col-12 px-0">コラム</h5>
 
 						<ul class="list-unstyled col-12 px-0">
-							<li>
-								<a href="#">お問い合わせ</a>
-							</li>
-
-							<li>
-								<a href="#">お知らせ</a>
-							</li>
-
-							<li>
-								<a href="#">ヘルプ</a>
-							</li>
-
 							<li>
 								<a href="#">サイトマップ</a>
 							</li>
