--- a/results.html
+++ b/results.html
@@ -63,9 +63,9 @@
 							<a class="nav-link" href="signup.html">Sign up</a>
 						</li> -->
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="#">ログアウト</a>
-						</li>
+						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -99,19 +99,59 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">北九州</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/hakata/index.html"
+									target="_blank"
+									>博多区</a
+								>
 							</li>
 
 							<li>
-								<a href="#">福岡</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/chuo/index.html"
+									target="_blank"
+									>中央区</a
+								>
 							</li>
 
 							<li>
-								<a href="#">筑豊</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/sawara/index.html"
+									target="_blank"
+									>早良区</a
+								>
 							</li>
 
 							<li>
-								<a href="#">筑後</a>
+								<a
+									href="https://www.city.fukuoka.lg.jp/jonan/index.html"
+									target="_blank"
+									>城南区</a
+								>
+							</li>
+
+							<li>
+								<a
+									href="https://www.city.fukuoka.lg.jp/nishi/index.html"
+									target="_blank"
+									>西区</a
+								>
+							</li>
+
+							<li>
+								<a
+									href="https://www.city.fukuoka.lg.jp/minami/index.html"
+									target="_blank"
+									>南区</a
+								>
+							</li>
+
+							<li>
+								<a
+									href="https://www.city.fukuoka.lg.jp/higashi/index.html"
+									target="_blank"
+									>東区</a
+								>
 							</li>
 						</ul>
 					</div>
@@ -121,23 +161,35 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">飲食店</a>
+								<a
+									href="https://www.cookdoor.jp/fukuoka/sc40130/list/"
+									target="_blank"
+									>飲食店</a
+								>
 							</li>
 
 							<li>
-								<a href="#">イベント</a>
+								<a
+									href="https://yokanavi.com/event/"
+									target="_blank"
+									>イベント</a
+								>
 							</li>
 
 							<li>
-								<a href="#">環境</a>
+								<a href="#" class="btn-link disabled">環境</a>
 							</li>
 
 							<li>
-								<a href="#">治安・安全</a>
+								<a href="#" class="btn-link disabled"
+									>治安・安全</a
+								>
 							</li>
 
 							<li>
-								<a href="#">入園・入学</a>
+								<a href="#" class="btn-link disabled"
+									>入園・入学</a
+								>
 							</li>
 						</ul>
 					</div>
@@ -147,18 +199,6 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">お問い合わせ</a>
-							</li>
-
-							<li>
-								<a href="#">お知らせ</a>
-							</li>
-
-							<li>
-								<a href="#">ヘルプ</a>
-							</li>
-
-							<li>
 								<a href="#">サイトマップ</a>
 							</li>
 						</ul>
@@ -167,10 +207,12 @@
 
 				<div id="copyright" class="text-center row align-items-center">
 					<p>
-						<img
-							src="images/logo_transparent2.png"
-							alt="sumunara logo"
-						/><span id="year"></span> MAD Works, LLC
+						<a href="index.html">
+							<img
+								src="images/logo_transparent2.png"
+								alt="sumunara logo"
+							/><span id="year"></span> MAD Works, LLC
+						</a>
 					</p>
 				</div>
 			</div>
