Add sitemap, modify stylings

--- a/details.html
+++ b/details.html
@@ -393,9 +393,7 @@
 				</div>
 
 				<div id="link-container">
-					<a href="index.html" class="more-link btn btn-warning"
-						>HOMEに戻る</a
-					>
+					<a href="index.html" class="btn btn-warning">HOMEに戻る</a>
 				</div>
 			</section>
 		</div>
