--- a/error.html
+++ b/error.html
@@ -82,13 +82,11 @@
 			<p class="zoom-area">
 				<b>おっと！</b>探しているページはありませんでした...
 			</p>
-		</section>
 
-		<div id="link-container">
-			<a href="index.html" class="more-link btn btn-warning"
-				>HOMEに戻る</a
-			>
-		</div>
+			<div id="link-container">
+				<a href="index.html" class="btn btn-warning">HOMEに戻る</a>
+			</div>
+		</section>
 		<!-- Error -->
 
 		<!-- Footer -->
