--- a/sitemap.html
+++ b/sitemap.html
@@ -19,7 +19,7 @@
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 		<link rel="stylesheet" href="./styles/style.css" />
 
-		<title>Sumunara | 検索結果</title>
+		<title>Sumunara | サイトマップ</title>
 	</head>
 
 	<body>
@@ -52,15 +52,19 @@
 				>
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html">ホーム</a>
+							<a class="nav-link" href="index.html"
+								>ホーム<span class="sr-only">(current)</span></a
+							>
 						</li>
 
 						<!-- <li class="nav-item">
-							<a class="nav-link" href="login.html">Log in</a>
+							<a class="nav-link" href="login.html">ログイン</a>
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link" href="signup.html">Sign up</a>
+							<a class="nav-link" href="signup.html"
+								>アカウント作成</a
+							>
 						</li> -->
 
 						<!-- <li class="nav-item">
@@ -72,27 +76,53 @@
 		</nav>
 		<!-- Navbar -->
 
-		<!-- Results -->
-		<section id="results-container" class="container">
-			<div>
-				<h1 id="results-title" class="text-center mb-5">
-					検索結果
-				</h1>
+		<!-- Sitemap -->
+		<section id="sitemap-container" class="container">
+			<div class="row container">
+				<h2>
+					<a href="index.html">ホーム</a>
+				</h2>
 			</div>
+			<hr />
 
-			<ul>
-				<li class="mb-3"><a href="#">住吉１丁目</a></li>
+			<div class="row container">
+				<div class="col">
+					<h2>街の最新情報</h2>
 
-				<li class="mb-3"><a href="#">住吉２丁目</a></li>
+					<ul>
+						<li>
+							<a
+								href="https://yokanavi.com/event/"
+								target="_blank"
+								>注目イベント</a
+							>
+						</li>
 
-				<li class="mb-3"><a href="#">住吉３丁目</a></li>
-			</ul>
+						<li>
+							<a
+								href="http://kateigomi-bunbetsu.city.fukuoka.lg.jp/"
+								target="_blank"
+								>地域別 ゴミの収集日一覧</a
+							>
+						</li>
+
+						<li>
+							<a
+								href="https://tabelog.com/fukuoka/rank/"
+								target="_blank"
+								>人気グルメ店ランキング</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<hr />
 
 			<div id="link-container">
 				<a href="index.html" class="btn btn-warning">HOMEに戻る</a>
 			</div>
 		</section>
-		<!-- Results -->
+		<!-- Sitemap -->
 
 		<!-- Footer -->
 		<footer id="footer">
