Modify spacing of the cards in index.html, apply link to sitemap in footer

--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
 					<h1>Sumunaraとは?</h1>
 				</div>
 
-				<div class="container">
+				<div>
 					<div class="row">
-						<div class="col-lg-4">
+						<div class="col-md-4">
 							<div class="card fade-in" data-delay="0s">
 								<img
 									class="card-img-top"
 									src="./images/icons/index_what-is-sumuna_icon1.png"
 									alt="information icon"
 								/>
-								<div class="card-body text-center">
-									<h5 class="card-title">
-										住みたい街が見つかる
+								<div class="card-body">
+									<h5 class="card-title text-center">
+										地域の情報
 									</h5>
 									<p class="card-text">
 										住所から周辺情報を簡単に検索できます。<br />交通や治安、コンビニやスーパー、騒音等、住まいに関する情報をお届けします。
@@ -133,16 +133,16 @@
 							</div>
 						</div>
 
-						<div class="col-lg-4">
+						<div class="col-md-4">
 							<div class="card fade-in" data-delay=".25s">
 								<img
 									class="card-img-top"
 									src="./images/icons/index_what-is-sumuna_icon2.png"
 									alt="search icon"
 								/>
-								<div class="card-body text-center">
-									<h5 class="card-title">
-										あなたに合った街を探します
+								<div class="card-body">
+									<h5 class="card-title text-center">
+										住みたい街が見つかる
 									</h5>
 									<p class="card-text">
 										街に住む上であなたが重視することはどんなことですか？<br />事前に登録しておくことであなたの希望に合った街が検索しやすくなります。
@@ -151,15 +151,17 @@
 							</div>
 						</div>
 
-						<div class="col-lg-4">
+						<div class="col-md-4">
 							<div class="card fade-in" data-delay=".7s">
 								<img
 									class="card-img-top"
 									src="./images/icons/index_what-is-sumuna_icon3.png"
 									alt="lightbulb"
 								/>
-								<div class="card-body text-center">
-									<h5 class="card-title">新しい発見</h5>
+								<div class="card-body">
+									<h5 class="card-title text-center">
+										新しい発見
+									</h5>
 									<p class="card-text">
 										自分の住む街でも意外と知らない魅力が隠れているものです。<br />どんなイベントがあるのか？どんなお店があるのか？<br />たくさん知って、自分の住む街をもっと好きになりませんか？
 									</p>
@@ -461,7 +463,7 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">サイトマップ</a>
+								<a href="sitemap.html">サイトマップ</a>
 							</li>
 						</ul>
 					</div>
