--- a/sitemap.html
+++ b/sitemap.html
@@ -233,7 +233,7 @@
 
 						<ul class="list-unstyled col-12 px-0">
 							<li>
-								<a href="#">サイトマップ</a>
+								<a href="sitemap.html">サイトマップ</a>
 							</li>
 						</ul>
 					</div>
