Change order of footer, change school ranking to school area data

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						type="text"
 						id="search"
 						class="form-control"
-						placeholder="Type in postal code or address..."
+						placeholder="住所を入力..."
 						aria-label="Type in postal code or address..."
 						aria-describedby="basic-addon2"
 					/>
@@ -204,7 +204,6 @@
 									class="img-fluid col-md-6 mx-auto"
 									alt="出かけよう！イベント画像"
 								/>
-								<!-- test delete img-fluid   -->
 
 								<div
 									class="media-body row col-12 col-md-6 mx-auto"
@@ -246,7 +245,11 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-6">
 						<div class="media mx-auto">
-							<a href="#" class="row align-items-center">
+							<a
+								href="https://www.city.fukuoka.lg.jp/kyoiku-iinkai/tsuugaku/ed/area/tsugaku.html"
+								class="row align-items-center"
+								target="_blank"
+							>
 								<img
 									data-src="./images/index_areas_image3.jpg"
 									class="img-fluid col-md-6 mx-auto"
@@ -257,11 +260,11 @@
 									class="media-body row col-12 col-md-6 mx-auto"
 								>
 									<h5 class="mt-2">
-										地域別 学校数ランキング
+										校区データ集
 									</h5>
 
 									<p>
-										小・中・高の学校それぞれ校数を、地域別にランキング化しました。
+										各地区の通学区情報を学校別・町名別にとりまとめた校区データ集です。
 									</p>
 									<!--違う形で提供した方がいいかも-->
 								</div>
@@ -364,6 +367,14 @@
 						<ul class="list-unstyled col-12 px-0">
 							<li>
 								<a
+									href="https://www.city.fukuoka.lg.jp/higashi/index.html"
+									target="_blank"
+									>東区</a
+								>
+							</li>
+
+							<li>
+								<a
 									href="https://www.city.fukuoka.lg.jp/hakata/index.html"
 									target="_blank"
 									>博多区</a
@@ -380,9 +391,9 @@
 
 							<li>
 								<a
-									href="https://www.city.fukuoka.lg.jp/sawara/index.html"
+									href="https://www.city.fukuoka.lg.jp/minami/index.html"
 									target="_blank"
-									>早良区</a
+									>南区</a
 								>
 							</li>
 
@@ -396,25 +407,17 @@
 
 							<li>
 								<a
+									href="https://www.city.fukuoka.lg.jp/sawara/index.html"
+									target="_blank"
+									>早良区</a
+								>
+							</li>
+
+							<li>
+								<a
 									href="https://www.city.fukuoka.lg.jp/nishi/index.html"
 									target="_blank"
 									>西区</a
-								>
-							</li>
-
-							<li>
-								<a
-									href="https://www.city.fukuoka.lg.jp/minami/index.html"
-									target="_blank"
-									>南区</a
-								>
-							</li>
-
-							<li>
-								<a
-									href="https://www.city.fukuoka.lg.jp/higashi/index.html"
-									target="_blank"
-									>東区</a
 								>
 							</li>
 						</ul>
