--- a/sitemap.html
+++ b/sitemap.html
@@ -100,6 +100,14 @@
 
 						<li>
 							<a
+								href="https://www.city.fukuoka.lg.jp/kyoiku-iinkai/tsuugaku/ed/area/tsugaku.html"
+								target="_blank"
+								>校区データ集</a
+							>
+						</li>
+
+						<li>
+							<a
 								href="http://kateigomi-bunbetsu.city.fukuoka.lg.jp/"
 								target="_blank"
 								>地域別 ゴミの収集日一覧</a
@@ -134,6 +142,14 @@
 						<ul class="list-unstyled col-12 px-0">
 							<li>
 								<a
+									href="https://www.city.fukuoka.lg.jp/higashi/index.html"
+									target="_blank"
+									>東区</a
+								>
+							</li>
+
+							<li>
+								<a
 									href="https://www.city.fukuoka.lg.jp/hakata/index.html"
 									target="_blank"
 									>博多区</a
@@ -150,9 +166,9 @@
 
 							<li>
 								<a
-									href="https://www.city.fukuoka.lg.jp/sawara/index.html"
+									href="https://www.city.fukuoka.lg.jp/minami/index.html"
 									target="_blank"
-									>早良区</a
+									>南区</a
 								>
 							</li>
 
@@ -166,25 +182,17 @@
 
 							<li>
 								<a
+									href="https://www.city.fukuoka.lg.jp/sawara/index.html"
+									target="_blank"
+									>早良区</a
+								>
+							</li>
+
+							<li>
+								<a
 									href="https://www.city.fukuoka.lg.jp/nishi/index.html"
 									target="_blank"
 									>西区</a
-								>
-							</li>
-
-							<li>
-								<a
-									href="https://www.city.fukuoka.lg.jp/minami/index.html"
-									target="_blank"
-									>南区</a
-								>
-							</li>
-
-							<li>
-								<a
-									href="https://www.city.fukuoka.lg.jp/higashi/index.html"
-									target="_blank"
-									>東区</a
 								>
 							</li>
 						</ul>
