Modify notes and sources in details.html, unlink the text next to the footer logo

--- a/details.html
+++ b/details.html
@@ -83,11 +83,9 @@
 
 			<h3 id="area" class="mb-3">住吉</h3>
 
-			<!-- <p id="summary-notes" class="mb-3">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
-				quos, quod consequuntur qui incidunt fugiat quia nesciunt soluta
-				assumenda unde?
-			</p> -->
+			<p id="summary-note" class="mb-3">
+				独自基準で算出したスコアを表示しております。
+			</p>
 		</div>
 		<!-- Details summary -->
 
@@ -114,6 +112,10 @@
 									class="get-data"
 									>人口 <span>25,000</span></a
 								>
+
+								<p id="population-note" class="note mb-3">
+									※人口については、対象の区の人口を算出しております。
+								</p>
 							</li>
 
 							<li>
@@ -137,6 +139,10 @@
 								>
 									交通事故発生率: <span>かなり高い</span>
 								</a>
+
+								<p id="traffic-accident-note" class="note mb-3">
+									※事故件数については、対象の区の件数を算出しております。
+								</p>
 							</li>
 
 							<!-- <div class="bar-container">
@@ -220,6 +226,12 @@
 							<div class="col-5 sum"></div>
 						</li>
 					</ul>
+
+					<div class="source-container">
+						<small>
+							<span class="source">福岡市公式サイト</span>より
+						</small>
+					</div>
 					<!-- population-details -->
 
 					<!-- noise-details -->
@@ -251,6 +263,12 @@
 							</div>
 						</li>
 					</ul>
+
+					<div class="source-container">
+						<small>
+							<span class="source">福岡市公式サイト</span>より
+						</small>
+					</div>
 					<!-- noise-details -->
 
 					<!-- Noise standards -->
@@ -440,6 +458,12 @@
 							<div class="col-5 sum"></div>
 						</li>
 					</ul>
+
+					<div class="source-container">
+						<small>
+							<span class="source">福岡市公式サイト</span>より
+						</small>
+					</div>
 					<!-- traffic-accident-details -->
 
 					<!-- crime-details -->
@@ -651,8 +675,9 @@
 							<img
 								src="images/logo_transparent2.png"
 								alt="sumunara logo"
-							/><span id="year"></span> MAD Works, LLC
+							/>
 						</a>
+						<span id="year"></span> MAD Works, LLC
 					</p>
 				</div>
 			</div>
