--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 										地域の情報
 									</h5>
 									<p class="card-text">
-										住所から周辺情報を簡単に検索できます。<br />交通や治安、コンビニやスーパー、騒音等、住まいに関する情報をお届けします。
+										住所から周辺情報を簡単に検索できます。<br />交通や治安、騒音等、住まいに関する情報をお届けします。
 									</p>
 								</div>
 							</div>
@@ -478,8 +478,9 @@
 							<img
 								src="images/logo_transparent2.png"
 								alt="sumunara logo"
-							/><span id="year"></span> MAD Works, LLC
+							/>
 						</a>
+						<span id="year"></span> MAD Works, LLC
 					</p>
 				</div>
 			</div>
