--- a/sitemap.html
+++ b/sitemap.html
@@ -253,8 +253,9 @@
 							<img
 								src="images/logo_transparent2.png"
 								alt="sumunara logo"
-							/><span id="year"></span> MAD Works, LLC
+							/>
 						</a>
+						<span id="year"></span> MAD Works, LLC
 					</p>
 				</div>
 			</div>
