--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@
 		></script>
 
 		<script type="module" src="scripts/main.js"></script>
+		<script src="/scripts/mainimage.js"></script>
 		<script src="/scripts/animation.js"></script>
 		<script src="/scripts/autocomplete.js"></script>
 	</body>
